--- a/WebCad/appsettings.json
+++ b/WebCad/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebCadContext": "Server=(localdb)\\mssqllocaldb;Database=WebCadContext-212157da-5bdb-4f9d-afad-2057ff23bd67;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
